# Mtech_Project

./: .gitignore  PLAN.md  Propose_Cifar.ipynb  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: CIFAR_EDA.ipynb
src/cifar10_eda/: __init__.py  config.py  data_loader.py  utils.py  visualization.py
src/cifar10_models/: config.py  data.py  export.py  metrics.py  train.py
tests/: test_data_loader.py  test_integration.py
