[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar10-eda"
version = "0.2.0"
description = "Production-grade EDA and PyTorch modeling for CIFAR-10."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "torchmetrics>=1.0",
    "onnx>=1.15",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "pytest>=7.0",
    "wandb>=0.16",
    "mlflow>=2.10",
]

[project.scripts]
cifar10-train = "cifar10_models.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::FutureWarning:copyreg.*",
    "ignore::UserWarning:onnxscript.*",
]
